Update guide, GearVR apps will probably temporarely disappear from OculusDB ui

--- a/OculusDB/frontend/guidequest.html
+++ b/OculusDB/frontend/guidequest.html
@@ -12,8 +12,9 @@
         <div class="content">
             <h2>Downgrading games</h2>
             
-            <h3>Do you have a PC with Sidequest (press no if you want to mod on android)?</h3>
-            <input class="big" type="button" onclick="location = `/guide/quest/sqq?${params.toString()}`" value="yes">
+            <h3>Do you have SideQuest? (press no if you want to mod on android)</h3>
+            <input class="big" type="button" onclick="location = `/guide/quest/sqq?${params.toString()}`" value="yes, on my PC">
+            <input class="big" type="button" onclick="location = `/guide/quest/qavs?${params.toString()}`" value="yes, on Android">
             <input class="big" type="button" onclick="location = `/guide/quest/qavs?${params.toString()}`" value="no">
         </div>
         <script src="/script.js"></script>
