--- a/OculusDB/frontend/utils.html
+++ b/OculusDB/frontend/utils.html
@@ -17,6 +17,7 @@
         <h3>Set Oculus token for downloads</h3>
         <p>You can save an Oculus token in your browser below to use the download button on OculusDB. It will only be saved locally and not sent anywhere.</p>
         <p>You will also need to remove the <code>oc_www_at</code> cookie via the developer tools (application tab) to be able to download games</p>
+        <a href="https://computerelite.github.io/tools/Oculus/ObtainTokenNew.html">Guide to get your token</a>
         <input type="password" placeholder="Oculus token" id="oculustoken">
 
         <input type="button" value="Save in browser" onmousedown="MouseDown(event)" onmouseup="if(MouseUp(event)) SaveToken()">
@@ -78,7 +79,12 @@
     UpdateBlockedApps()
     
     function SaveToken() {
-        localStorage.oculusToken = document.getElementById("oculustoken").value
+        var token = document.getElementById("oculustoken").value
+        if(!token.startsWith("FR")) {
+            alert("Your token is not correct. Please refer to the token guide to get your token.")
+            return
+        }
+        localStorage.oculusToken = token
         alert("saved")
     }
     
