update button again

--- a/OculusDB/frontend/utils.html
+++ b/OculusDB/frontend/utils.html
@@ -84,7 +84,7 @@
         alert("Saved token, you must also install an extension for downloads to work. I'll open it when you press ok. After installing it, return to this page.")
         window.open("https://chromewebstore.google.com/detail/incognito-url-opener/mdehanmmmmflmlgobaogkgepjldhpibm", "_blank")
         PopUp(`Click the Incognito URL Opener extension in your navigation bar and add <code>securecdn.oculus.com</code> as url for download to work.
-        <input type="button" onclick="location = "/utils" value="Done">`)
+        <input type="button" onclick="location = '/utils'" value="Done">`)
     }
     
     function SaveToken(showMsg = true) {
